--- a/examples/package.json
+++ b/examples/package.json
@@ -11,15 +11,18 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.0.1",
-    "@storybook/addon-info": "^3.4.10",
-    "@storybook/addon-options": "^3.4.10",
-    "@storybook/react": "^3.4.10",
+    "@storybook/addon-actions": "^4.0.0-alpha.23",
+    "@storybook/addon-info": "^4.0.0-alpha.23",
+    "@storybook/addon-options": "^4.0.0-alpha.23",
+    "@storybook/react": "^4.0.0-alpha.23",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-info": "^3.4.2",
     "@types/storybook__react": "^3.0.9",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "node-sass": "^4.7.2",
+    "or-code-previewer": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "react-docgen-typescript-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
@@ -28,6 +31,6 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts": "^2.0.4"
+    "react-scripts": "^2.0.3"
   }
 }
