--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
   },
   "homepage": "https://github.com/one-react/modal#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-angular": "^7.1.2",
     "@types/enzyme": "^3.1.14",
@@ -64,6 +65,7 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "classnames": "^2.2.6",
     "or-button": "^0.1.0",
     "or-theme": "^1.2.0",
