--- a/examples/package.json
+++ b/examples/package.json
@@ -27,6 +27,7 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "or-button": "^1.1.0",
     "or-icons": "^1.3.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
